Compiler/tests/semantics/fail/instancia_clase_System.java
// Falla porque no puede crearse una instancia de la clase System.

class Test {
	static void main()
	var Object x;
	{
		x = new System();
	}

}